# MathModel

./: .gitignore  PROJECT_OVERVIEW.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: analyst_agent.py  base_agent.py  coder_agent.py  planner_agent.py  writer_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/config/: md_template.toml  prompts.py  settings.py
backend/app/core/: __init__.py  code_executor.py  event_bus.py  llm_client.py  task_manager.py
backend/app/models/: message.py  task.py
backend/app/utils/: file_handler.py  json_utils.py  paper_builder.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.ts  router.ts  style.css
frontend/src/components/: AgentChat.vue  CodeViewer.vue  PaperPreview.vue  ProblemInput.vue
frontend/src/lib/: api.ts
frontend/src/stores/: task.ts
frontend/src/types/: ws.ts
frontend/src/views/: HomeView.vue  TaskView.vue
