[project]
name = "math-modeling-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a math modeling competition agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "litellm>=1.48.0",
  "redis>=5.0.8",
  "jupyter-client>=8.6.2",
  "ipykernel>=6.29.5",
  "python-docx>=1.1.2",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scipy>=1.14.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 96
target-version = "py311"

